--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,5 @@
-.root{
-  margin-top: 20px
+.root {
+  margin-top: 20px;
 }
 .title {
   color: Black;
@@ -8,8 +8,8 @@
   font-size: 72px;
   margin-top: 20%;
 }
-.subtitle{
+.subtitle {
   font-size: 32px;
   color: grey;
-  margin-bottom: 10px
+  margin-bottom: 10px;
 }
