--- a/src/app/query-selector/page.module.css
+++ b/src/app/query-selector/page.module.css
@@ -1,13 +1,19 @@
-
 .title {
-    font-size: 40px;
-    font-weight: 600;
-    font-family: "Inter", sans-serif;
-    margin-left: 10px;
-    color: #3b4d63;
+  font-size: 40px;
+  font-weight: 600;
+  font-family: 'Inter', sans-serif;
+  margin: 5px 20px;
+  color: #ffffff;
+  display: inline-block;
+  background-color: #216869;
+  padding: 4px 30px;
+  border-radius: 15px;
 }
 .header {
-    background-color: #ACCBE1;
-    box-shadow: 10px 5px 5px #637081;
-    border-radius: 5px;
+  background-color: #eeeffb;
+}
+
+.mainPage {
+  padding-top: 20px;
+  background-color: #eeeffb;
 }
