--- a/src/app/query-builder/page.module.css
+++ b/src/app/query-builder/page.module.css
@@ -1,3 +1,66 @@
 .main {
   margin-top: 5%;
 }
+.inputLabel {
+  font-size: 32px;
+  font-weight: 600;
+}
+.inputRoot {
+  width: 75%;
+  margin-bottom: 1%;
+}
+.description {
+  font-size: 20px;
+}
+
+/* From Mantine */
+.tab {
+  text-transform: uppercase;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
+  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-6));
+
+  &:first-of-type {
+    border-radius: 4px 0 0 4px;
+
+    @mixin rtl {
+      border-radius: 0 4px 4px 0;
+    }
+  }
+
+  &:last-of-type {
+    border-radius: 0 4px 4px 0;
+
+    @mixin rtl {
+      border-radius: 4px 0 0 4px;
+    }
+  }
+
+  & + & {
+    border-left-width: 0;
+
+    @mixin rtl {
+      border-right-width: 0;
+      border-left-width: 1px;
+    }
+  }
+
+  @mixin hover {
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-5));
+  }
+
+  &[data-active] {
+    z-index: 1;
+    background-color: var(--mantine-color-blue-filled);
+    border-color: var(--mantine-color-blue-filled);
+    color: var(--mantine-color-white);
+
+    @mixin hover {
+      background-color: var(--mantine-color-blue-filled-hover);
+    }
+  }
+}
+.panel {
+  margin-top: 1%;
+}
