--- a/src/app/query-builder/layout.module.css
+++ b/src/app/query-builder/layout.module.css
@@ -8,7 +8,15 @@
   background-color: var(--mantine-color-blue-7);
   padding: 4px 30px;
   border-radius: 15px;
+  text-decoration: none;
 }
 .mainPage {
   padding-top: 20px;
+}
+.tableHead {
+  background-color: var(--mantine-color-blue-7);
+  color: white;
+}
+.tableHead:hover {
+  color: black;
 }
