--- a/src/app/query-selector/page.module.css
+++ b/src/app/query-selector/page.module.css
@@ -7,7 +7,8 @@
   display: inline-block;
   background-color: var(--mantine-color-blue-7);
   padding: 4px 30px;
-  border-radius: 10px;
+  border-radius: 15px;
+  text-decoration: none;
 }
 .mainPage {
   padding-top: 20px;
