--- a/src/app/query-builder/page.module.css
+++ b/src/app/query-builder/page.module.css
@@ -1,5 +1,6 @@
 .main {
   margin-top: 5%;
+  margin-bottom: 1%;
 }
 .inputLabel {
   font-size: 32px;
@@ -7,60 +8,27 @@
 }
 .inputRoot {
   width: 75%;
-  margin-bottom: 1%;
 }
 .description {
   font-size: 20px;
 }
-
-/* From Mantine */
 .tab {
-  text-transform: uppercase;
+  padding: 15px;
   font-weight: 600;
-  position: relative;
-  border: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-4));
-  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-6));
-
-  &:first-of-type {
-    border-radius: 4px 0 0 4px;
-
-    @mixin rtl {
-      border-radius: 0 4px 4px 0;
-    }
-  }
-
-  &:last-of-type {
-    border-radius: 0 4px 4px 0;
-
-    @mixin rtl {
-      border-radius: 4px 0 0 4px;
-    }
-  }
-
-  & + & {
-    border-left-width: 0;
-
-    @mixin rtl {
-      border-right-width: 0;
-      border-left-width: 1px;
-    }
-  }
-
-  @mixin hover {
-    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-5));
-  }
-
-  &[data-active] {
-    z-index: 1;
-    background-color: var(--mantine-color-blue-filled);
-    border-color: var(--mantine-color-blue-filled);
-    color: var(--mantine-color-white);
-
-    @mixin hover {
-      background-color: var(--mantine-color-blue-filled-hover);
-    }
-  }
+  font-size: 24px;
+}
+.root {
+  margin-top: 1%;
 }
 .panel {
+  margin-left: 1%;
+}
+.tabContainer {
+  padding: 0px;
+}
+.selectorTitle {
+  margin-left: 1%;
   margin-top: 1%;
+  display: inline;
+  margin-right: 10px;
 }
