--- a/src/app/global.module.css
+++ b/src/app/global.module.css
@@ -23,3 +23,8 @@
 .MultiSelectStyles {
   margin-left: 10px;
 }
+
+.modalHeader {
+  font-weight: bold;
+  font-size: var(--mantine-h2-font-size);
+}
